# codeoptix

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRD.md  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  results.json  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: README.md  ci.yml  codeflect-check.yml  codeflect-full.yml  codeflect-simple.yml  docs.yml
advanced/bloom/: index.html
advanced/error-handling/: index.html
advanced/gepa/: index.html
advanced/performance/: index.html
api-reference/: index.html
concepts/acp/: index.html
concepts/adapters/: index.html
concepts/behaviors/: index.html
concepts/evaluation/: index.html
concepts/evolution/: index.html
concepts/overview/: index.html
concepts/reflection/: index.html
docs/: API.md  DOCUMENTATION_COMPLETE.md  GEPA_DETAILED.md  GEPA_SUMMARY.md  GITHUB_ACTIONS.md  QUICKSTART_GITHUB_ACTIONS.md  README.md  api-reference.md  contributing.md  index.md
docs/advanced/: bloom.md  error-handling.md  gepa.md  performance.md
docs/concepts/: acp.md  adapters.md  behaviors.md  evaluation.md  evolution.md  overview.md  reflection.md
docs/examples/: acp-integration-examples.md  adapter-usage.md  behavioral-spec.md  gepa-demo.md
docs/getting-started/: first-evaluation.md  installation.md  quickstart.md  single-behavior-quickstart.md
docs/guides/: acp-integration.md  cli-usage.md  configuration.md  custom-behaviors.md  github-actions.md  ollama-integration.md  performance-testing.md  python-api.md  ui-testing.md
docs/stylesheets/: extra.css  gradients.css
examples/: OLLAMA_TEST_RESULTS.md  README.md  basic_adapter_usage.py  behavioral_spec_example.py  ollama_demo.py  quickstart-single-behavior.py
examples/acp-integration-examples/: index.html
examples/adapter-usage/: index.html
examples/behavioral-spec/: index.html
examples/configs/: README.md  basic.yaml  ci-cd.yaml  ollama-insecure-code.yaml  single-behavior-insecure-code.yaml  single-behavior-plan-drift.yaml  single-behavior-vacuous-tests.yaml
examples/gepa-demo/: index.html
getting-started/first-evaluation/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/single-behavior-quickstart/: index.html
guides/acp-integration/: index.html
guides/cli-usage/: index.html
guides/configuration/: index.html
guides/custom-behaviors/: index.html
guides/github-actions/: index.html
guides/ollama-integration/: index.html
guides/performance-testing/: index.html
guides/python-api/: index.html
guides/ui-testing/: index.html
search/: search_index.json
src/codeoptix/: __init__.py  cli.py
src/codeoptix/acp/: __init__.py  agent.py  bridge.py  client_adapter.py  code_extractor.py  orchestrator.py  registry.py
src/codeoptix/adapters/: __init__.py  base.py  basic.py  claude_code.py  codex.py  factory.py  gemini_cli.py
src/codeoptix/artifacts/: __init__.py  manager.py
src/codeoptix/behaviors/: __init__.py  base.py  insecure_code.py  plan_drift.py  vacuous_tests.py
src/codeoptix/evaluation/: __init__.py  bloom_integration.py  engine.py  evaluators.py  scenario_generator.py
src/codeoptix/evolution/: __init__.py  engine.py  gepa_integration.py  proposer.py
src/codeoptix/linters/: __init__.py  bandit_linter.py  base.py  coverage_linter.py  flake8_linter.py  html_accessibility_linter.py  language_detector.py  mypy_linter.py  pip_audit_linter.py  pylint_linter.py  ruff_linter.py  runner.py  safety_linter.py
src/codeoptix/reflection/: engine.py  generator.py
src/codeoptix/utils/: __init__.py  config.py  llm.py  retry.py
stylesheets/: syntax.css
tests/: __init__.py  conftest.py  test_adapters.py  test_artifacts.py  test_behaviors.py  test_behaviors_coverage.py  test_cli.py  test_cli_commands.py  test_evaluation.py  test_evaluators.py  test_evolution.py  test_imports.py  test_llm.py  test_reflection.py
