[project]
name = "codeoptix"
version = "0.1.0"
description = "Agentic Code Optimization for better Coding Agent Experience"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Shashi Jagtap", email = "shashi@super-agentic.ai"},
    {name = "Shashi Jagtap", email = "shashikant.jagtap@icloud.com"}
]
maintainers = [
    {name = "Shashi Jagtap", email = "team@super-agentic.ai"},
    {name = "Shashi Jagtap", email = "shashikant.jagtap@icloud.com"}
]
license = {text = "Apache-2.0"}
keywords = ["ai", "coding-agents", "behavioral-optimization", "code-evaluation"]
urls = {Homepage = "https://github.com/SuperagenticAI/codeoptix"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "anthropic>=0.75.0",
    "openai>=2.0.0",
    "google-genai>=0.8.0",
    "numpy>=1.24.0",
    "litellm>=1.0.0",
    "tenacity>=8.0.0",
    "gepa==0.0.22",
    "agent-client-protocol>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
testing = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "bandit>=1.7.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "pymdown-extensions>=10.0.0",
    "mkdocs-minify-plugin>=0.7.0",
]
accessibility = [
    # Note: pa11y is a Node.js tool, not a Python package
    # Install separately: npm install -g pa11y
]

[project.scripts]
codeoptix = "codeoptix.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".eggs",
    "*.egg",
    "build",
    "dist",
    "site",
    "src/codeoptix/vendor/",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "TRY",    # tryceratops
    "NPY",    # NumPy-specific rules
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value used in comparison
    "TRY003",  # avoid specifying long messages outside exception class
]

[tool.ruff.lint.isort]
known-first-party = ["codeoptix"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.bandit]
exclude_dirs = ["tests", "examples", "docs", "scripts", "reference_code", "site"]
skips = ["B101"]  # Skip assert_used test (tests use assert)
